<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="text_to_support">Написать в поддержку</string>
    <string name="share_message">Посмотри курс по Android-разработке в Практикуме! %1$s</string>
    <string name="support_email" translatable="false">your.email@example.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="android_course_url" translatable="false">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="cancel_letter" translatable="false">X</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="explanation_network_error">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="country">Страна</string>
    <string name="favs">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlists_empty">Ваша медиатека пуста</string>
    <string name="not_created_yet">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_library">Медиатека</string>
    <string name="delete_playlist_confirm">Завершить создание плейлиста?</string>
    <string name="delete_playlist_message">Всё несохранённые данные будут потеряны</string>
    <string name="pl_name">Название*</string>
    <string name="pl_description">Описание</string>
    <string name="pl_create">Создать</string>
    <string name="pl_yes">Да</string>
    <string name="pl_no">Нет</string>
    <string name="pl_created">Плейлист %s создан</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_message2">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="delete_playlist_cancel">Отмена</string>
    <string name="delete_playlist_delete">Удалить</string>
    <string name="theres_no_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_track">Хотите удалить трек?</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="theres_no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <string name="save">Сохранить</string>
    <string name="pl_saved">Плейлист %s сохранён</string>
    <string name="track_count">треков</string>
    <string name="track_count2_4">трека</string>
    <string name="track_count1">трек</string>
    <string name="min_count">минут</string>
    <string name="min_count2_4">минуты</string>
    <string name="min_count1">минута</string>
</resources>