<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:paddingTop="24dp"
        android:paddingBottom="16dp"
        android:text="@string/settings"
        android:textColor="@color/onBackground"
        android:textSize="25sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="8dp">

        <TextView
            style="@style/SettingsTextView"
            android:layout_gravity="start|center_vertical"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:thumbTint="@color/icon_tint"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/shareAppContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="8dp">

        <TextView
            style="@style/SettingsTextView"
            android:layout_gravity="start"
            android:text="@string/share_app" />

        <ImageView
            style="@style/SettingsIconView"
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            android:layout_gravity="end"
            android:src="@drawable/sharing_icon"
            app:tint="@color/icon_tint" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/supportContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="8dp">

        <TextView
            style="@style/SettingsTextView"
            android:layout_gravity="start"
            android:text="@string/text_to_support" />

        <ImageView
            style="@style/SettingsIconView"
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            android:layout_gravity="end"
            android:src="@drawable/support_icon"
            app:tint="@color/icon_tint" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/userAgreementContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingVertical="8dp">

        <TextView
            style="@style/SettingsTextView"
            android:layout_gravity="start"
            android:text="@string/user_agreement" />

        <ImageView
            style="@style/SettingsIconView"
            android:layout_width="@dimen/default_icon_size"
            android:layout_height="@dimen/default_icon_size"
            android:layout_gravity="end"
            android:src="@drawable/arrow_forward_icon"
            app:tint="@color/icon_tint" />
    </FrameLayout>

</LinearLayout>