<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            app:tint="@color/onBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/arrow_left" />

        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:maxWidth="312dp"
            android:maxHeight="312dp"
            android:scaleType="centerCrop"
            android:background="@drawable/rounded_image_background"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/back_button"
            app:srcCompat="@drawable/placeholder" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <TextView
            android:id="@+id/track_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="Track name"
            android:textColor="@color/onBackground"
            android:textSize="22sp"
            android:fontFamily="@font/ys_display_bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/album_cover" />

        <TextView
            android:id="@+id/artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:text="Artist name"
            android:textColor="@color/onBackground"
            android:textSize="16sp"
            android:fontFamily="@font/ys_display_bold"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/track_name" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/buttonGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="visible"
            app:constraint_referenced_ids="playPauseButton,likeButton,addToPlaylistButton" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:padding="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
            app:layout_constraintEnd_toStartOf="@id/playPauseButton"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/playPauseButton"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_add_media" />

        <ImageButton
            android:id="@+id/playPauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:padding="16dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@id/likeButton"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            app:srcCompat="@drawable/ic_play_media" />

        <TextView
            android:id="@+id/playback_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="0:00"
            android:textColor="@color/onBackground"
            android:fontFamily="@font/ys_display"
            app:layout_constraintTop_toBottomOf="@id/playPauseButton"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toEndOf="@id/right_guideline" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:padding="8dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@id/playPauseButton"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toEndOf="@id/playPauseButton"
            app:layout_constraintTop_toTopOf="@id/playPauseButton"
            app:layout_constraintVertical_bias="0.3"
            app:srcCompat="@drawable/ic_liked_border_media" />

        <LinearLayout
            android:id="@+id/labelsColumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintEnd_toStartOf="@id/valuesColumn"
            app:layout_constraintTop_toBottomOf="@id/playback_progress">

            <TextView
                android:id="@+id/track_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/duration"
                android:fontFamily="@font/ys_display"/>

            <TextView
                android:id="@+id/album_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/album"
                android:fontFamily="@font/ys_display"/>

            <TextView
                android:id="@+id/release_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/year"
                android:fontFamily="@font/ys_display"/>

            <TextView
                android:id="@+id/genre_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/genre"
                android:fontFamily="@font/ys_display"/>

            <TextView
                android:id="@+id/country_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/country"
                android:fontFamily="@font/ys_display"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/valuesColumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/labelsColumn"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintTop_toBottomOf="@id/playback_progress">

            <TextView
                android:id="@+id/track_duration_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="0:00"
                android:fontFamily="@font/ys_display"
                android:textColor="@color/onBackground"/>

            <TextView
                android:id="@+id/album_info_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="None"
                android:fontFamily="@font/ys_display"
                android:textColor="@color/onBackground"/>

            <TextView
                android:id="@+id/release_year_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="2000"
                android:fontFamily="@font/ys_display"
                android:textColor="@color/onBackground"/>

            <TextView
                android:id="@+id/genre_info_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="Pop"
                android:fontFamily="@font/ys_display"
                android:textColor="@color/onBackground"/>

            <TextView
                android:id="@+id/country_info_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="United States"
                android:fontFamily="@font/ys_display"
                android:textColor="@color/onBackground"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>